--- a/UiComponents/UiComponents.csproj
+++ b/UiComponents/UiComponents.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.4" />
+    <PackageReference Include="Radzen.Blazor" Version="4.7.12" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
